# ebook-autoconverter

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: linter.yml  publish.yml  test.yml
ebook_autoconverter/: __main__.py  calibre.py  config.py  core.py  exceptions.py  network.py  report.py  status.py
test/: pre-provision.py  run.sh  upload_file.py
test/data/: .gitignore  app.db  metadata.db
